--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -43,7 +43,7 @@
             <setting name="ConstantsMathExpanded" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="AdditionalExpanded" serializeAs="String">
+            <setting name="AdditionalMathExpanded" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="ConstantsLogicExpanded" serializeAs="String">
@@ -60,6 +60,9 @@
             </setting>
             <setting name="Lang" serializeAs="String">
                 <value>Auto</value>
+            </setting>
+            <setting name="AdditionalLogicExpanded" serializeAs="String">
+                <value>False</value>
             </setting>
         </xFunc.Properties.Settings>
     </userSettings>
