--- a/xFunc.Test/xFunc.Test.csproj
+++ b/xFunc.Test/xFunc.Test.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Expressions\Maths\Hyperbolic\HyperbolicSineTest.cs" />
     <Compile Include="Expressions\Maths\UndefineTest.cs" />
     <Compile Include="Expressions\Maths\GCDTest.cs" />
+    <Compile Include="Expressions\Maths\LCMTest.cs" />
     <Compile Include="LogicParameterCollectionTest.cs" />
     <Compile Include="MathLexerMock.cs" />
     <Compile Include="MathParserTest.cs" />
