--- a/xFunc.Logics/xFunc.Logics.csproj
+++ b/xFunc.Logics/xFunc.Logics.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Expressions\Undefine.cs" />
     <Compile Include="Expressions\Variable.cs" />
     <Compile Include="Expressions\XOr.cs" />
-    <Compile Include="ILogicLexer.cs" />
+    <Compile Include="ILexer.cs" />
     <Compile Include="LogicLexer.cs" />
     <Compile Include="LogicParser.cs" />
     <Compile Include="LogicToken.cs" />
