--- a/xFunc.Maths/xFunc.Maths.csproj
+++ b/xFunc.Maths/xFunc.Maths.csproj
@@ -49,6 +49,9 @@
   <ItemGroup>
     <Compile Include="Expressions\GCD.cs" />
     <Compile Include="Expressions\LCM.cs" />
+    <Compile Include="IDifferentiator.cs" />
+    <Compile Include="ISimplifier.cs" />
+    <Compile Include="MathDifferentiator.cs" />
     <Compile Include="MathLexerException.cs" />
     <Compile Include="MathParserException.cs" />
     <Compile Include="Expressions\Abs.cs" />
@@ -105,10 +108,11 @@
     <Compile Include="Expressions\Undefine.cs" />
     <Compile Include="Expressions\UserFunction.cs" />
     <Compile Include="Expressions\Variable.cs" />
-    <Compile Include="IMathLexer.cs" />
+    <Compile Include="ILexer.cs" />
     <Compile Include="MathExtentions.cs" />
     <Compile Include="MathLexer.cs" />
     <Compile Include="MathParser.cs" />
+    <Compile Include="MathSimplifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.uk.Designer.cs">
       <DependentUpon>Resource.uk.resx</DependentUpon>
