Changed project files.

--- a/xFunc.Logics/xFunc.Logics (.Net 4.0).csproj
+++ b/xFunc.Logics/xFunc.Logics (.Net 4.0).csproj
@@ -105,7 +105,7 @@
   <ItemGroup>
     <None Include="key.pfx" />
     <None Include="LICENSE">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
