--- a/xFunc.Logics/xFunc.Logics (.Net 3.0).csproj
+++ b/xFunc.Logics/xFunc.Logics (.Net 3.0).csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\net30\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;NET30;NET30_OR_GREATER</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NET30;NET30_OR_GREATER;NET20_OR_GREATER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -26,7 +26,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\net30\Release\</OutputPath>
-    <DefineConstants>TRACE;NET30;NET30_OR_GREATER</DefineConstants>
+    <DefineConstants>TRACE;NET30;NET30_OR_GREATER;NET20_OR_GREATER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
