--- a/xFunc.Maths/xFunc.Maths (.Net 3.5).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 3.5).csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\net35\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;NET35;NET35_OR_GREATER;NET30_OR_GREATER</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NET35;NET35_OR_GREATER;NET30_OR_GREATER;NET20_OR_GREATER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -26,7 +26,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\net35\Release\</OutputPath>
-    <DefineConstants>TRACE;NET35;NET35_OR_GREATER;NET30_OR_GREATER</DefineConstants>
+    <DefineConstants>TRACE;NET35;NET35_OR_GREATER;NET30_OR_GREATER;NET20_OR_GREATER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
