--- a/xFunc.Maths/xFunc.Maths (.Net 3.0).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 3.0).csproj
@@ -66,7 +66,7 @@
     <Compile Include="Expressions\Trigonometric\Arcsec.cs" />
     <Compile Include="Expressions\Trigonometric\Arcsin.cs" />
     <Compile Include="Expressions\Trigonometric\Arctan.cs" />
-    <Compile Include="Expressions\Assign.cs" />
+    <Compile Include="Expressions\Define.cs" />
     <Compile Include="Expressions\BinaryMathExpression.cs" />
     <Compile Include="Expressions\Hyperbolic\Arcsch.cs" />
     <Compile Include="Expressions\Hyperbolic\Arsech.cs" />
