--- a/xFunc.Maths/xFunc.Maths (Portable).csproj
+++ b/xFunc.Maths/xFunc.Maths (Portable).csproj
@@ -58,7 +58,7 @@
     <Compile Include="Expressions\Abs.cs" />
     <Compile Include="Expressions\Add.cs" />
     <Compile Include="Expressions\AngleMeasurement.cs" />
-    <Compile Include="Expressions\Assign.cs" />
+    <Compile Include="Expressions\Define.cs" />
     <Compile Include="Expressions\BinaryMathExpression.cs" />
     <Compile Include="Expressions\Bitwise\And.cs" />
     <Compile Include="Expressions\Bitwise\Not.cs" />
