--- a/xFunc.Test/xFunc.Test (.Net 4.5).csproj
+++ b/xFunc.Test/xFunc.Test (.Net 4.5).csproj
@@ -110,7 +110,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MathLexerTest.cs" />
     <Compile Include="LogicLexerTest.cs" />
-    <Compile Include="MathParserSimplificationTest.cs" />
+    <Compile Include="SimplifierTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\xFunc.Logics\xFunc.Logics %28.Net 4.5%29.csproj">
