--- a/xFunc.Test/xFunc.Test (Portable).csproj
+++ b/xFunc.Test/xFunc.Test (Portable).csproj
@@ -110,7 +110,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MathLexerTest.cs" />
     <Compile Include="LogicLexerTest.cs" />
-    <Compile Include="MathParserSimplificationTest.cs" />
+    <Compile Include="SimplifierTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\xFunc.Logics\xFunc.Logics %28Portable%29.csproj">
