--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -64,6 +64,9 @@
             <setting name="AdditionalLogicExpanded" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="NumberBase" serializeAs="String">
+                <value>Decimal</value>
+            </setting>
         </xFunc.Properties.Settings>
     </userSettings>
 </configuration>
