--- a/xFunc.Maths/xFunc.Maths (Portable).csproj
+++ b/xFunc.Maths/xFunc.Maths (Portable).csproj
@@ -121,6 +121,7 @@
     <Compile Include="MathParser.cs" />
     <Compile Include="MathParserException.cs" />
     <Compile Include="MathSimplifier.cs" />
+    <Compile Include="NumberSystems.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.uk.Designer.cs">
       <DependentUpon>Resource.uk.resx</DependentUpon>
