Fixed project files.

--- a/xFunc.Maths/xFunc.Maths (.Net 2.0).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 2.0).csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Expressions\GCD.cs" />
     <Compile Include="Expressions\LCM.cs" />
+    <Compile Include="Expressions\Simplify.cs" />
     <Compile Include="IDifferentiator.cs" />
     <Compile Include="EnumerableExtention.cs" />
     <Compile Include="ISimplifier.cs" />
