--- a/xFunc.Maths/xFunc.Maths (.Net 4.5).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 4.5).csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Expressions\GCD.cs" />
     <Compile Include="Expressions\LCM.cs" />
+    <Compile Include="Expressions\Simplify.cs" />
     <Compile Include="IDifferentiator.cs" />
     <Compile Include="ISimplifier.cs" />
     <Compile Include="MathDifferentiator.cs" />
