--- a/xFunc.Logics/xFunc.Logics (.Net 2.0).csproj
+++ b/xFunc.Logics/xFunc.Logics (.Net 2.0).csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="EnumerableExtention.cs" />
     <Compile Include="LogicLexerException.cs" />
     <Compile Include="LogicParserException.cs" />
