--- a/xFunc.Logics/xFunc.Logics (.Net 3.5).csproj
+++ b/xFunc.Logics/xFunc.Logics (.Net 3.5).csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="LogicLexerException.cs" />
     <Compile Include="LogicParserException.cs" />
     <Compile Include="Expressions\And.cs" />
