--- a/xFunc.Maths/xFunc.Maths (.Net 4.5).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 4.5).csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Expressions\GCD.cs" />
     <Compile Include="Expressions\LCM.cs" />
     <Compile Include="Expressions\Simplify.cs" />
