Adapted for all projects

--- a/xFunc.Maths/xFunc.Maths (.Net 3.0).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 3.0).csproj
@@ -48,7 +48,9 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Expressions\GCD.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicMathExpression.cs" />
     <Compile Include="Expressions\LCM.cs" />
+    <Compile Include="Expressions\ReverseFunctionAttribute.cs" />
     <Compile Include="IDifferentiator.cs" />
     <Compile Include="EnumerableExtention.cs" />
     <Compile Include="ISimplifier.cs" />
