--- a/xFunc.Maths/xFunc.Maths (.Net 3.5).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 3.5).csproj
@@ -50,7 +50,9 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Expressions\GCD.cs" />
+    <Compile Include="Expressions\Hyperbolic\HyperbolicMathExpression.cs" />
     <Compile Include="Expressions\LCM.cs" />
+    <Compile Include="Expressions\ReverseFunctionAttribute.cs" />
     <Compile Include="Expressions\Simplify.cs" />
     <Compile Include="IDifferentiator.cs" />
     <Compile Include="ISimplifier.cs" />
