--- a/xFunc.Test/xFunc.Test (.Net 4.0).csproj
+++ b/xFunc.Test/xFunc.Test (.Net 4.0).csproj
@@ -102,6 +102,8 @@
     <Compile Include="Expressions\Maths\GCDTest.cs" />
     <Compile Include="Expressions\Maths\LCMTest.cs" />
     <Compile Include="Expressions\Maths\FactTest.cs" />
+    <Compile Include="Expressions\Maths\BinaryTest.cs" />
+    <Compile Include="Expressions\Maths\UnaryTest.cs" />
     <Compile Include="LogicParameterCollectionTest.cs" />
     <Compile Include="MathLexerMock.cs" />
     <Compile Include="MathParserTest.cs" />
