--- a/xFunc.Maths/xFunc.Maths (.Net 3.0).csproj
+++ b/xFunc.Maths/xFunc.Maths (.Net 3.0).csproj
@@ -51,6 +51,8 @@
     <Compile Include="Expressions\GCD.cs" />
     <Compile Include="Expressions\Hyperbolic\HyperbolicMathExpression.cs" />
     <Compile Include="Expressions\LCM.cs" />
+    <Compile Include="Expressions\MathParameter.cs" />
+    <Compile Include="Expressions\MathParameterIsReadOnlyException.cs" />
     <Compile Include="Expressions\ReverseFunctionAttribute.cs" />
     <Compile Include="IDifferentiator.cs" />
     <Compile Include="EnumerableExtention.cs" />
