--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -67,6 +67,9 @@
             <setting name="NumberBase" serializeAs="String">
                 <value>Decimal</value>
             </setting>
+            <setting name="CheckUpdates" serializeAs="String">
+                <value>True</value>
+            </setting>
         </xFunc.Properties.Settings>
     </userSettings>
 </configuration>
