--- a/xFunc.Maths/xFunc.Maths (Portable).csproj
+++ b/xFunc.Maths/xFunc.Maths (Portable).csproj
@@ -151,7 +151,7 @@
     <Compile Include="MathParserException.cs" />
     <Compile Include="MathProcessor.cs" />
     <Compile Include="MathSimplifier.cs" />
-    <Compile Include="NumberSystems.cs" />
+    <Compile Include="NumberSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.uk.Designer.cs">
       <DependentUpon>Resource.uk.resx</DependentUpon>
