--- a/xFunc.Maths/xFunc.Maths (Portable).csproj
+++ b/xFunc.Maths/xFunc.Maths (Portable).csproj
@@ -78,6 +78,10 @@
     <Compile Include="..\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Expressions\DifferentParametersExpression.cs" />
+    <Compile Include="Expressions\ExpressionParameters.cs" />
+    <Compile Include="IExpressionFactory.cs" />
+    <Compile Include="MathExpressionFactory.cs" />
     <Compile Include="Expressions\Fact.cs" />
     <Compile Include="Expressions\Abs.cs" />
     <Compile Include="Expressions\Add.cs" />
