--- a/xFunc/app.config
+++ b/xFunc/app.config
@@ -70,6 +70,30 @@
             <setting name="CheckUpdates" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="VarWindowTop" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="VarWindowLeft" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="FuncWindowTop" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="FuncWindowLeft" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="VarWindowWidth" serializeAs="String">
+                <value>220</value>
+            </setting>
+            <setting name="VarWindowHeight" serializeAs="String">
+                <value>280</value>
+            </setting>
+            <setting name="FuncWindowWidth" serializeAs="String">
+                <value>220</value>
+            </setting>
+            <setting name="FuncWindowHeight" serializeAs="String">
+                <value>280</value>
+            </setting>
         </xFunc.Properties.Settings>
     </userSettings>
 </configuration>
