--- a/xFunc/xFunc.csproj
+++ b/xFunc/xFunc.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Views\VariableView.xaml.cs">
       <DependentUpon>VariableView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\WindowExtentions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
